--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,15 +9,18 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     # 자동 생성된 쿼리를 보여주는 옵션
-    show-sql: true
+    # show-sql: true
     # 로그가 나올 때 어떤 디비에 맞게 나오는지 설정
     database-platform: org.hibernate.dialect.MariaDB106Dialect
 
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
        hibernate:
         # sql을 줄바꿈해서 예쁘게 출력
          format_sql: true
     # 디비 계열 설정
     database: mysql
+
+logging.level:
+  org.hibernate.SQL: debug
